--- a/Dockerfile1
+++ b/Dockerfile1
@@ -2,4 +2,4 @@ FROM ubuntu
 
 
 ADD ./index.html ./usr/share/nginx/html
-ENTRYPOINT service nginx restart && bash
+ENTRYPOINT service nginx start && bash
