--- a/app.yml
+++ b/app.yml
@@ -12,9 +12,9 @@
      raw: docker rm -f c1 c2
      ignore_errors: true
    - name: docker build c1
-     raw: docker run -dti --name c1 -p 98:80 meghanath/tak1:1 ./bin/bash
+     raw: docker run -dti --name c1 -p 98:80 meghanath/tak1:1 /bin/bash
    - name: docker build c2
-     raw: docker run -dti --name c2 -p 97:80 meghanath/tak2:1 ./bin/bash
+     raw: docker run -dti --name c2 -p 97:80 meghanath/tak2:1 /bin/bash
 
  - hosts: qa
    tags: qa
@@ -27,9 +27,9 @@
      raw: docker rm -f c1 c2
      ignore_errors: true
    - name: docker build c1
-     raw: docker run -dti --name c1 -p 98:80 meghanath/tak1:1 ./bin/bash
+     raw: docker run -dti --name c1 -p 98:80 meghanath/tak1:1 /bin/bash
    - name: docker build c2
-     raw: docker run -dti --name c2 -p 97:80 meghanath/tak2:1 ./bin/bash
+     raw: docker run -dti --name c2 -p 97:80 meghanath/tak2:1 /bin/bash
 
 
 
